// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles empty title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "elevation": 1,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "paddingLeft": 20,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  />
</View>
`;

exports[`renders header with title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "elevation": 1,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "paddingLeft": 20,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Flipkart
  </Text>
</View>
`;

exports[`updates header title 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "elevation": 1,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "center",
      "paddingLeft": 20,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    PRETTYLITTLETHING
  </Text>
</View>
`;
